# hermes-teamspeak3

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.ocx/: receipt.jsonc
.opencode/: opencode.jsonc  package.json
.opencode/agents/: research.md
docker/: entrypoint.sh  healthcheck.sh
docs/: SETUP.md
pbis/: INSTRUCTIONS.md  PBI_TEMPLATE.md
pbis/planned/: PBI-001_project-scaffolding.md  PBI-002_serverquery-client.md  PBI-003_ts3-client-audio-bridge.md  PBI-004_voice-pipeline.md  PBI-005_teamspeak-adapter.md  PBI-006_bot-commands-auth.md  PBI-007_docker-deployment.md  PBI-008_tests.md
scripts/: download_ts3_client.sh  setup_audio.sh
src/hermes_agent_ts3/: __init__.py  adapter.py  audio_bridge.py  commands.py  config.py  plugin.yaml  server_query.py  server_query_types.py  ts3_client.py  voice_constants.py  voice_player.py  voice_receiver.py
tests/: conftest.py  test_adapter.py  test_audio_bridge.py  test_commands.py  test_config.py  test_ts3_client.py  test_voice_player.py  test_voice_receiver.py
tests/gateway/: config.py  session.py
tests/tools/: transcription_tools.py  tts_tool.py  voice_mode.py
